--- a/style.css
+++ b/style.css
@@ -2,4 +2,45 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  text-align: center;
+}
+
+nav a {
+  padding: 0 10px 0 10px;
+  background: rgb(228, 168, 168);
+}
+
+figcaption {
+  text-align: center;
+}
+
+#featured-property {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#featured-property p {
+  text-align: center;
+  font-size: smaller;
+  width: 800px;
+}
+
+#details {
+  width: 100%;
+  text-align: center;
+  background: red;
+}
+
+#details div {
+  float: left;
+  width: 25%;
 }
